src/main/frontend/components/block.css
.block-content-wrapper {
  user-select: text;
  @screen sm {
    overflow-x: visible;
  }
}

.block-content {
  @apply min-h-[24px] max-w-full whitespace-pre-wrap break-words cursor-text;

  img {

    /* FIXME: img macros */

    &.left {
      float: left;
    }

    &.right {
      float: right;
    }

    &.loading-asset {
      width: 9px;
    }
  }

  .draw [aria-labelledby="shapes-title"] {
    position: absolute;
    left: 50%;
    transform: translate(-50%);
  }

  &-fallback-ui {
    padding: 10px 15px;
    border-color: var(--ls-secondary-border-color);
  }

  [data-tooltipped]:has(a.tag) {
    @apply px-0.5;
  }
}

.block-content-or-editor-wrap {
  @apply flex flex-1 flex-row flex-wrap gap-1;
}

.block-content-or-editor-inner {
  @apply flex flex-1 flex-col w-full pr-1;
}

.block-head-wrap {
  @apply flex flex-1 w-full flex-row flex-wrap;
  @apply justify-between items-center;
}

.page-ref {
  @apply inline;

  .icon-emoji-wrap {
    position: relative;
    top: 0.08em;
    padding-left: 1px;

    &.as-emoji {
      top: 0.02em;
      padding-right: 1px;
    }
  }

  .icon-cp-container {
    @apply inline-flex items-center pr-0.5;
    vertical-align: middle;

    &.photo-icon {
      @apply pr-1.5;
    }
  }

  .icon-emoji-wrap em-emoji,
  .icon-cp-container .ui__icon {
    vertical-align: middle;
  }

  .block-title-wrap.as-heading {
    @apply inline text-[length:inherit];
  }
}

/* Center emoji icons in inline icon boxes (used by CMD+K, page refs, etc.) */
.icon-inline .ui__icon {
  @apply inline-flex items-center justify-center;
}

.icon-inline em-emoji,
.icon-inline .emoji-mart-emoji,
.icon-inline .emoji-mart-emoji > span {
  line-height: 1 !important;
}

.breadcrumb {
  @apply inline;

  .asset-container > img {
    height: 18px;
    width: unset !important;
  }

  a, svg, div {
    @apply inline;
  }

  &.block-parents {
    a {
      color: var(--ls-primary-text-color);

      &:hover {
        opacity: 1;
      }
    }
  }
}

.breadcrumb {
  .property-value-inner[data-type], .property-value-inner .select-item {
    display: inline;
  }
}

.open-block-ref-link {
  background-color: var(--ls-page-properties-background-color);
  padding: 1px 4px;
  border-radius: 2px;
}

.block-body {
  blockquote:first-child,
  pre:first-child {
    margin-top: 8px;
    margin-bottom: 8px;
  }
  .raw_html {
    white-space: normal;
    line-height: 1.2em;
  }
}

.block-body ul,
.block-body ol,
.block-body dl {
  @apply mb-0;

  > li {
    @apply py-[1px] m-0;

    .ui__checkbox {
      @apply mr-1.5 overflow-hidden relative top-0.5;
    }
  }
}

.block-body ol {
  list-style-position: inside;
  margin-left: 0;

  > li {
    &::marker,
    > p {
      display: initial;
    }
  }
}

.block-children-container {
  position: relative;
  margin-left: 29px;
}

.block-children-left-border {
  z-index: 1;
  width: 4px;
  left: -1px;
  top: 0;
  height: 100%;
  cursor: pointer;
  background-clip: content-box;
  background-color: transparent;
  position: absolute;
  border-radius: 2px;
  opacity: 0.6;
  border-left-color: var(--lx-gray-09, var(--ls-border-color, var(--rx-gray-09)));

  &:hover {
    background-color: var(--lx-gray-10, var(--ls-primary-text-color, var(--rx-gray-10)));
    opacity: .7;
  }

  &:active {
    opacity: 1;
  }
}

.block-children {
  border-left: 1px solid;
  border-left-color: var(--lx-gray-04-alpha, var(--ls-guideline-color, var(--rx-gray-04-alpha))) !important;
}

.hidden-block .block-children {
  border-left: 0;
}

.block-control-wrap, .ls-page-title .property-value .block-control-wrap {
  @apply h-[24px];

  &.is-order-list {
    @apply mr-0 pr-0;

    .bullet-link-wrap {
      @apply relative left-[-3px];
    }
  }

  &.bullet-hidden {
    padding-right: 2px;
  }
}

.ls-page-title .block-control-wrap {
  height: initial;
}

/* Ensure page title has correct font-size in both editing and non-editing mode */
.ls-page-title-container {
  font-size: var(--ls-page-title-size, 32px) !important;
}

.ls-page-title-container .block-title-wrap {
  font-size: inherit;
}

.block-title-wrap {
  @apply w-full inline;

  > .ui__checkbox {
    @apply relative top-0.5;

    &.checked {
      @apply top-1;
    }

    > span {
      @apply h-full;
    }
  }

  &.as-heading {
    @apply flex flex-1 items-center flex-wrap;

    > .ui__checkbox {
      @apply top-0;
    }

    h1& {
      .ui__icon.ti svg {
        @apply w-8 h-7;
      }
    }

    h2& {
      .ui__icon.ti svg {
        @apply w-7 h-6;
      }
    }

    h3& {
      .ui__icon.ti svg {
        @apply w-5 h-5;
      }
    }

    &.as-inline {
      @apply inline;
    }
  }

  &:has(.dsl-query), &:has(.embed-page) {
    @apply flex flex-row w-full;

    > .embed-page {
      @apply w-full;
    }
  }

  .dsl-query {
    @apply w-full;
  }
}

.block-control {
  @apply decoration-0 text-sm cursor-default mt-[1px]
  min-w-[22px] min-h-[22px] p-0.5 select-none opacity-40;

  .control-hide {
    @apply hidden;
  }

  &:active {
    @apply opacity-30;
  }
}

.block-left-menu {
  background-color: var(--ls-secondary-background-color);
  background: linear-gradient(90deg, var(--ls-primary-background-color) 0%, var(--ls-secondary-background-color) 100%);

  .commands-button {
    @apply overflow-hidden flex max-w-[40px];

    .indent {
      @apply flex items-center w-full justify-center opacity-30;
    }
  }
}

.block-right-menu {
  background-color: var(--ls-secondary-background-color);
  /* background: linear-gradient(-90deg, var(--ls-primary-background-color) 0%, var(--ls-secondary-background-color) 100%); */

  .commands-button {
    @apply overflow-hidden flex flex-nowrap;

    .outdent, .more {
      @apply flex items-center justify-center
      overflow-hidden opacity-30 m-0 w-[40px];
    }
  }
}
/* ... */

